# letsql

./: .codespell.ignore-words  .envrc  .envrc.user.editable  .envrc.user.flake  .envrc.user.nix  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  compose.yaml  draft.py  flake.nix  justfile  pixi.toml  pyproject.toml  requirements-dev.txt  rust-toolchain.toml  shell.nix  vendors.txt
.github/: renovate.json
.github/workflows/: ci-codspeed.yaml  ci-docs-main.yml  ci-docs-preview.yml  ci-lint.yml  ci-pre-release.yml  ci-publish.yml  ci-test-examples.yml  ci-test-library.yml  ci-test-s3.yml  ci-test-snowflake.yml  ci-test.yml
db/: datafusion.sql
docs/: .gitignore  _publish.yml  _quarto.yml  _renderer.py  _supported.py  api-reference.qmd  api.qmd  concepts.qmd  contributor-guide.qmd  core_concepts.mdx  custom.scss  development.mdx  docs.json  index.qmd  installation.qmd  introduction.qmd  objects.json  overview.mdx  overview.qmd  quick-start.qmd  styles.css  tutorial.qmd
docs/_site/: index.html
docs/_site/reference/: expression-generic.mdx  expression-strings.mdx  ml-api.mdx
docs/api/: _utils.py  let.qmd
docs/api-reference/: expression-generic.mdx  expression-numeric.mdx  expression-relations.mdx  expression-strings.mdx  expression-temporal.mdx  ml-api.mdx  toplevel-api.mdx
docs/api/_templates/: api.qmd
docs/examples/: mortgage.mdx
docs/operations/: 01-basic-operations.qmd  02-column-selection.qmd  03-join.qmd  04-functions.qmd  05-aggregate-functions.qmd  06-window-functions.qmd  07-user-defined-functions.qmd
docs/reference/: _sidebar.yml  expression-generic.qmd  expression-numeric.qmd  expression-relations.qmd  expression-strings.qmd  expression-temporal.qmd  index.qmd  ml-api.qmd  toplevel-api.qmd
docs/style/: letsql.scss
examples/: README.md  cached-csv-reading.py  deferred_pandas_reader.py  deferred_read_csv.py  expr_scalar_udf.py  flight_exchange_example.py  into_backend_example.py  local_cache.py  multi_engine.py  pandas_example.py  penguins_example.py  postgres_caching.py  predict_xgb.py  python_udwf.py  quickgrove_udf.py  remote_caching.py  simple_example.py  train_test_splits.py  xgboost_udaf.py  yaml_roundrip.py
nix/: commands.nix  crate-wheel.nix  letsql.nix  pyproject.build-system.diff
python/letsql/: __init__.py  config.py  conftest.py  internal.py  main.py  profiles.py  selectors.py
python/letsql/backends/: conftest.py
python/letsql/backends/datafusion/: __init__.py  compiler.py  provider.py  udfs.py  udwfs.py
python/letsql/backends/duckdb/: __init__.py  compiler.py
python/letsql/backends/let/: __init__.py  hotfix.py
python/letsql/backends/pandas/: __init__.py  executor.py  hotfix.py
python/letsql/backends/postgres/: __init__.py  compiler.py  hotfix.py
python/letsql/backends/snowflake/: __init__.py  hotfix.py
python/letsql/backends/trino/: __init__.py
python/letsql/common/: caching.py  collections.py  exceptions.py
python/letsql/common/tests/: test_cache.py
python/letsql/common/utils/: aws_utils.py  caching_utils.py  dask_normalize.py  dask_normalize_expr.py  dask_normalize_function.py  dask_normalize_other.py  (+10 more)
python/letsql/compiler/: core.py  relations.py  simplifier.py  values.py
python/letsql/db/: __init__.py  booster2sql.py  optimizer.py  planner.py  predict.py  simplify.py
python/letsql/examples/: __init__.py  core.py
python/letsql/executor/: __init__.py  collected.py  core.py  segment.py  transform.py  utils.py
python/letsql/expr/: __init__.py  api.py  letsql_expr.py  ml.py  pyaggregator.py  relations.py  selectors.py  translate.py  udf.py
python/letsql/flight/: __init__.py  action.py  backend.py  client.py  exchanger.py  server.py
python/letsql/ibis_yaml/: compiler.py  sql.py  translate.py  utils.py
python/letsql/optimizer/: __init__.py
python/letsql/pipe/: README.md
python/letsql/sql/: parser.py
python/letsql/tests/: conftest.py  test_aggregation.py  test_api.py  test_array.py  test_client.py  test_complex_exprs.py  test_examples.py  test_generic.py  test_into_backend.py  test_join.py  test_ml.py  test_ml_rewrite_xgb_udf.py  test_numeric.py  test_param.py  test_pipe.py  test_register.py  test_select.py  test_set_ops.py  test_string.py  test_struct.py  test_temporal.py  test_udf.py  test_wrapper.py  util.py
python/xorq/: __init__.py  config.py  internal.py  selectors.py
python/xorq/common/: caching.py  collections.py  exceptions.py
python/xorq/examples/: __init__.py  core.py
python/xorq/expr/: __init__.py  api.py  ml.py  pyaggregator.py  relations.py  translate.py  udf.py
python/xorq/flight/: __init__.py  backend.py  exchanger.py  server.py
python/xorq/ibis_yaml/: compiler.py  sql.py  translate.py  utils.py
python/xorq/sql/: parser.py
python/xorq/tests/: conftest.py  test_aggregation.py  test_api.py  test_array.py  test_client.py  test_complex_exprs.py  test_examples.py  test_generic.py  test_into_backend.py  test_join.py  test_ml.py  test_ml_rewrite_xgb_udf.py  test_numeric.py  test_param.py  test_predict.py  test_register.py  test_select.py  test_set_ops.py  test_string.py  test_struct.py  test_temporal.py  test_udf.py  test_wrapper.py  util.py
scripts/: demo-remote-table-placeholder-caching-bug.py  lib.py  settings.py  zip_data.py
src/: catalog.rs  context.rs  dataframe.rs  dataset.rs  dataset_exec.rs  errors.rs  expr.rs  functions.rs  ibis_filter_expression.rs  ibis_table.rs  ibis_table_exec.rs  lib.rs  model.rs  object_storage.rs  optimizer.rs  physical_plan.rs  predict_udf.rs  provider.rs  py_record_batch_provider.rs  pyarrow_filter_expression.rs  record_batch.rs  sql.rs  tensor_functions.rs  udaf.rs  udf.rs  udwf.rs  utils.rs
src/common/: data_type.rs  schema.rs
src/expr/: cast.rs  empty_relation.rs  indexed_field.rs  limit.rs  ordered.rs  scalar_function.rs  sort.rs  sort_expr.rs  wildcard.rs  window.rs
src/functions/: greatest.rs  hash_int.rs  least.rs  min_max.rs
src/sql/: builder.rs  logical.rs  parser.rs
src/tensor_functions/: mean_all.rs  rotate.rs  segment_anything.rs
(+167 files in other folders)
