[package]
name = "letsql"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "letsql"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "sync"] }
pyo3 = { version = ">=0.21.1,<1", features = ["extension-module", "abi3", "abi3-py38", "gil-refs"] }
datafusion =  { version = ">=40.0.0, <42", features = ["pyarrow", "avro"]}
datafusion-common = { version = ">=40.0.0,<42", features = ["pyarrow"] }
datafusion-expr = ">=40.0.0,<42"
prost = ">=0.12,<0.14"
datafusion-optimizer = ">=40.0.0,<42"
datafusion-sql = ">=40.0.0,<42"
futures = "0.3"
async-trait = "0.1"
arrow = ">=52.2.0,<53"
gbdt = { git = "https://github.com/letsql/gbdt-rs.git", rev = "8262de1d20ab6dc7c7e6778b243578d190fb6a62" }
parking_lot = { version = "0.12" }
arrow-ord = ">=52.2.0,<53"
datafusion-functions-aggregate = { version = ">=40.0.0,<42" }
arrow-schema = "52.2.0, ||, ^53"
arrow_convert = "0.6.8"
itertools = "0.13.0"
candle-core = "0.6.0"
image = "0.25.2"
candle-nn = "0.6.0"
candle-transformers = "0.6.0"
imageproc = "0.25.0"
aws-config = "0.55"
aws-credential-types = "0.55"
dirs = "4.0.0"
object_store = { version = "0.10.1", features = ["aws", "gcp", "http"] }
url = "2.2"
