[package]
name = "letsql"
version = "0.1.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "letsql"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "=1.42.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
pyo3 = { version = "=0.22.6", features = ["extension-module", "abi3", "abi3-py38"] }
datafusion =  { version = "=43.0.0", features = ["pyarrow", "avro"]}
datafusion-common = { version = "=43.0.0", features = ["pyarrow"] }
datafusion-expr = "=43.0.0"
prost = "=0.13.4"
datafusion-optimizer = "=43.0.0"
datafusion-sql = "=43.0.0"
futures = "=0.3.31"
async-trait = "=0.1.84"
arrow = "=53.3.0"
gbdt = { git = "https://github.com/letsql/gbdt-rs.git", rev = "8262de1d20ab6dc7c7e6778b243578d190fb6a62" }
parking_lot = { version = "=0.12.3" }
arrow-ord = "=53.3.0"
datafusion-functions-aggregate = { version = "=43.0.0" }
aws-config = "=0.101.0"
aws-credential-types = "=0.101.0"
object_store = { version = "=0.11.2", features = ["aws", "gcp", "http"] }
url = "=2.5.4"
